--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="https://static.wikia.nocookie.net/vagabond/images/9/96/04.png/revision/latest?cb=20200514175141" alt="Yoshiyoka Denshichiro" width="180" height="190">
+                <img src="https://static.wikia.nocookie.net/vagabond/images/9/96/04.png" alt="Yoshiyoka Denshichiro" width="180" height="190">
             </td>
             <td>
                 <h1>Takeda Kuro</h1>
