--- a/index.html
+++ b/index.html
@@ -1,92 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kuro's site</title>
+	<meta charset="UTF-8">
+	<title>⚡Xaalivaar's Personal Site</title>
 </head>
+
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td>
-                <img src="https://static.wikia.nocookie.net/vagabond/images/9/96/04.png" alt="Yoshiyoka Denshichiro" width="180" height="190">
-            </td>
-            <td>
-                <h1>Takeda Kuro</h1>
-                <p><em>Btech, <strong>CSE</strong></em></p>
-                <p>
-                    I am a curious learner hoping to become an influential
-                    researcher in the field of computer science and its applications
-                    in research and development of concepts in pure science.
-                </p>
-            </td>
-        </tr>
-    </table>    
-    
-    <hr>
-    <p>
-        <h3>Education</h3>
-        <ul>
-            <li>B.Tech in CSE, North Eastern Hill Universty</li>
-            <li>Higher Secondary, Army Public School Narangi</li>
-        </ul>
-    </p>
-    <hr>
 
-    <p>
-        <h3>Performance scores</h3>
-        <table cellspacing="20">
-            <thead>
-                <tr>
-                    <th>Exam</th>
-                    <th>Board</th>
-                    <th>Scores</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Higher secondary</td>
-                    <td>CBSE</td>
-                    <td>67%</td>
-                </tr>
-                <tr>
-                    <td>Btech CSE</td>
-                    <td>NEHU</td>
-                    <td>73.8%</td>
-                </tr>
-            </tbody>            
-        </table>
-    </p>
-    <hr>
+	<table cellspacing="20">
+		<tr>
+			<td>
+				<img src="https://vignette.wikia.nocookie.net/vagabond/images/9/96/04.png/revision/latest?cb=20200514175141"
+					alt="Image not available" height="200" width="180">
+				<!-- <img src="denshichiro.png" alt="Image not available"> -->
+			</td>
+			<td>
+				<h1>Xaalivaar</h1>
+				<p><em>Web dev noob,<br>unixporn enthusiast and,<br>the most <strong>professional
+							procrastinator</strong></em>
+				</p>
+				<p>I rice linux, listen to music and play games all day long.</p>
 
-    <p>
-        <h3>Skills</h3>
-        <table cellpadding="10">
-            <tr>
-                <td>Anime fact gathering</td>
-                <td>☆☆☆☆☆</td>
-            </tr>
-            <tr>
-                <td>Audiophile stuff</td>
-                <td>☆☆☆</td>
-            </tr>
-            <tr>
-                <td>Programming</td>
-                <td>☆</td>
-            </tr>
-            <tr>
-                <td>Being cool headed</td>
-                <td>!!!!!</td>
-            </tr>
-        </table>
-    </p>
-    <hr>
+			</td>
+		</tr>
+	</table>
+	<hr>
 
-    <h3><a href="hobbies.html">My hobbies</a></h3>
-    <hr>
-    <h3><a href="contacts.html">Contact me</a></h3>
-    <hr>
-    
+	<h3>Education</h3>
+	<ul>
+		<li>Computer science and Engineering
+			<ul>
+				<li>From Regional Institute of Science and Technology, affiliated to NEHU</li>
+			</ul>
+		</li>
+		<li>Schooling
+			<ul>
+				<li>Army Public School, Narangi</li>
+			</ul>
+		</li>
+		<li>Music
+			<ul>
+				<li>Tabla, Bhatkhande School of Music, Punjab Gharana, Madhyama</li>
+			</ul>
+			<ul>
+				<li>Guitar, Royal School of Music, Grade 1</li>
+			</ul>
+		</li>
+		<li>Fine arts
+			<ul>
+				<li>Aarohan, 4 year certification course</li>
+			</ul>
+		</li>
+	</ul>
+	<hr>
+
+	<h3>Projects</h3>
+	<table cellspacing="15">
+		<thead>
+			<tr>
+				<th><u>Project link</u></th>
+				<th><u>Project description</u></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>inthefuture.com/bspMXiso</td>
+				<td>An MX linux iso centered around terminal with bspwm as twm</td>
+			</tr>
+			<tr>
+				<td>inthefuture.com/cincproj</td>
+				<td>An ensemble approach to analysis of CinC 2016 dataset</td>
+			</tr>
+			<tr>
+				<td>inthefuture.com/multikano</td>
+				<td>Kano's model implementation using scikit tools</td>
+			</tr>
+		</tbody>
+		<tfoot></tfoot>
+	</table>
+	<hr>
+
+	<h3>Skills</h3>
+	<table cellspacing="15">
+		<tr>
+			<td>
+				<table>
+					<tr>
+						<td>Theoretical concepts</td>
+						<td>⭐⭐☆☆☆</td>
+					</tr>
+					<tr>
+						<td>Core utils</td>
+						<td>⭐☆☆☆☆</td>
+					</tr>
+					<tr>
+						<td>Analytic aptitude</td>
+						<td>⭐⭐☆☆☆</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table>
+					<tr>
+						<td>DE customisation</td>
+						<td>⭐☆☆☆☆</td>
+					</tr>
+					<tr>
+						<td>Music production</td>
+						<td>⭐☆☆☆☆</td>
+					</tr>
+			</td>
+				</table>
+		</tr>
+	</table>
+	<hr>
+
+
+	<a href="hobbies.html">
+		<h3>Hobbies</h3>
+	</a>
+	<a href="contact.html">
+		<h3>Contact me</h3>
+	</a>
+
 </body>
+
 </html>
