--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="width: 100vw;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#intro">&emsp;{KLB}&emsp;</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
