--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		</div>
 	</section>
 
-	<div class="b-example-divider"></div>
+	<div class="b-example-divider" style="width: 100vw;"></div>
 
 	<section id="entrances">
 		<div class="container px-4 py-5 text-center" id="featured-3">
@@ -91,7 +91,7 @@
 				</div>
 	</section>
 
-	<div class="b-example-divider"></div>
+	<div class="b-example-divider" style="width: 100vw;"></div>
 
 	<section id="education">
 		<div class="container py-5 my-5">
@@ -114,7 +114,7 @@
 		</div>
 	</section>
 
-	<div class="b-example-divider"></div>
+	<div class="b-example-divider" style="width: 100vw;"></div>
 
 	<section id="acaproj" class="py-5">
 		<div class="container my-5">
@@ -159,7 +159,7 @@
 		</div>
 	</section>
 
-	<div class="b-example-divider"></div>
+	<div class="b-example-divider" style="width: 100vw;"></div>
 
 	<section id="hobbies" class="py-5">
 		<div class="container py-3 my-5">
@@ -302,7 +302,7 @@
 		</div>
 	</section>
 
-	<div class="b-example-divider"></div>
+	<div class="b-example-divider" style="width: 100vw;"></div>
 
 	<section id="footer">
 		<div class=" card">
